--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,7 @@
 galaxy_info:
   author: Yannik Sembritzki
   description: This role removes the .disabled extension that hosting companys sometimes adds to default cronjobs to disable them and save cpu cycles. These cronjobs generally exist for a reason and should be run if there is no reason against it.
-  
   license: GPLv2
-  
   min_ansible_version: 2.0
 
   platforms:
@@ -11,4 +9,5 @@ galaxy_info:
     versions:
     - all
   
-  galaxy_tags: ['cronjob', 'cronjobs']
+  galaxy_tags: ['cronjob', 'cronjobs', 'system']
+  dependencies: []
