--- a/tasks/fix-cronjobs.yml
+++ b/tasks/fix-cronjobs.yml
@@ -1,10 +1,16 @@
- - name: check if disabled cronjobs exist
+ - name: get list of cronjobs with disabled postfix
+   find:
+     paths:
+       - /etc/cron.daily
+       - /etc/cron.weekly
+       - /etc/cron.monthly
+     patterns: "*.disabled"
+   register: cronjob_disabled_files
+
+ - name: remove disabled postfix from cronjobs
    command: mv {{ item }} {{ item | regex_replace('.disabled$', '') }}
-   register: cronjob_disabled_results
-   with_fileglob:
-     - /etc/cron.daily/*.disabled
-     - /etc/cron.weekly/*.disabled
-     - /etc/cron.monthly/*.disabled
+   with_items: "{{ cronjob_disabled_files.files | map(attribute='path') | list }}"
    when: > 
         item|regex_replace('.+/(.+).disabled', '\\1') in cronjob_enable_list and
         item|regex_replace('.+/(.+).disabled', '\\1') not in cronjob_enable_blacklist
+
